--- a/popup.html
+++ b/popup.html
@@ -1,18 +1,48 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <style>
-      button {
-        outline: none;
-        border: none;
-        background-color: orange;
-        border: 2px solid #000000;
-      }
-    </style>
+    <script src="tailwindcss.js"></script>
   </head>
 
   <body>
-    <button id="startNavigation">Scan Contacts</button>
+    <div class="w-96 my-6">
+      <div class="bg-white shadow-md rounded px-8 pt-6 pb-8 mb-4">
+        <div class="mb-4">
+          <label
+            class="block text-gray-700 text-sm font-bold mb-2"
+            for="mobile"
+          >
+            Mobile No.
+          </label>
+          <input
+            class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline"
+            id="mobile"
+            type="text"
+            placeholder="Mobile No."
+          />
+          <p
+            class="text-red-500 text-xs italic mt-1"
+            id="error"
+            style="display: none"
+          >
+            Please enter mobile no.
+          </p>
+        </div>
+
+        <div class="flex items-center justify-between">
+          <button
+            class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline"
+            id="startNavigation"
+          >
+            Scan contacts
+          </button>
+        </div>
+      </div>
+      <p class="text-center text-gray-500 text-xs">
+        &copy;<span id="year"></span> Aircraft Captcha Services. All rights
+        reserved.
+      </p>
+    </div>
     <script src="popup.js"></script>
   </body>
   <html></html>
