--- a/popup.html
+++ b/popup.html
@@ -19,6 +19,8 @@
             id="mobile"
             type="text"
             placeholder="Mobile No."
+            minlength="10"
+            maxlength="10"
           />
           <p
             class="text-red-500 text-xs italic mt-1"
@@ -39,8 +41,14 @@
         </div>
       </div>
       <p class="text-center text-gray-500 text-xs">
-        &copy;<span id="year"></span> Aircraft Captcha Services. All rights
-        reserved.
+        &copy;<span id="year"></span> TechAircraft Solution Private Limited. All
+        right reserved.
+      </p>
+      <p class="text-center text-gray-500 text-xs mt-1">
+        For more details Email us at
+        <a class="text-blue-600" href="mailto:support@techaircraft.com"
+          >support@techaircraft.com</a
+        >
       </p>
     </div>
     <script src="popup.js"></script>
